<resources>
<string name="app_name">SimpliLfy</string>
    <string name="content_value"> [content]</string>

<string name="title_name">SimpliLyf</string>
    <string name="facebook_app_id">772283899544162</string>
<string name="username">UserName:</string>
<string name="pwd">Password:</string>
<string name="cancel">Cancel</string>
<string name="login">Login</string>
<string name="forgotLink">Forgot UserName | Forgot Password</string>
<string name="signupLink">New to SimpliLyf?</string>
<string name="action_settings">Settings</string>
<string name="title_activity_showdevices">ShowdevicesActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_voice">Hello, How can I help you today?</string>
    <string name="title_activity_nest">NestActivity</string>
    <string name="title_activity_philips">PhilipsActivity</string>
    <string name="title_activity_voicemodule">VoicemoduleActivity</string>
    <string name="nest_title">nest</string>
    <string name="livingroom">Living Room</string>
    <string name="bedroom">Bed Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="title_activity_nest_livingrm">NestLivingrmActivity</string>
    <string name="title_activity_user_registration">UserRegistrationActivity</string>

    <string name="speech_prompt">Hello, How can I help you today?</string>
    <string name="interative_prompt">Say,yes or no</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_add_new_device">AddNewDevice</string>
    <string name="vendor_prompt">Choose a vendor</string>
    <!--<string name="title_activity_philips_details">Philip</string>-->

    <string-array name="vendor_array">
        <item>Select a vendor</item>
        <item>Nest</item>
        <item>Philips</item>
        <item>August</item>
        <item>Kiwi</item>
    </string-array>
    <string name="title_activity_philips_details">PhilipsDetailsActivity</string>
</resources>
